--- a/style2.css
+++ b/style2.css
@@ -55,8 +55,8 @@ body {
     color: rgba(136, 136, 136, 0.758);
 }
 
-.icon-bl1-2, .icon-bl2-2, .icon-bl3-2 {
-    font-size: 45px;
+#icon-bl1-2, #icon-bl2-2, #icon-bl3-2 {
+    font-size: 50px;
 }
 
 .icon-bl1-2, .icon-bl3-2, .para2-bl1-2, .para2-bl3-2 {
@@ -99,4 +99,9 @@ body {
         height: 350px;
         padding: 40px;
     }
+
+    #icon-bl1-2, #icon-bl2-2, #icon-bl3-2 {
+        font-size: 65px;
+    }
+    
 }
