--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 100px;
 }
 
 .headline-2 {
@@ -20,7 +20,14 @@ body {
     text-align: center;
     width: 300px;
     height: 300px;
-    font-size: 22px;
+}
+
+.headline-2 h2 {
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 57px; /* 123.913% */
+    letter-spacing: 0.2px;
 }
 
 .infor-2 {
@@ -30,9 +37,9 @@ body {
 }
 
 .block1-2, .block2-2, .block3-2 {
-    border: 1px solid black;
-    box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;
+    border: 1px solid #DEDEDE;
+    box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -59,7 +66,11 @@ body {
     font-size: 50px;
 }
 
-.icon-bl1-2, .icon-bl3-2, .para2-bl1-2, .para2-bl3-2 {
+.para2-bl2-2 a {
+    color: #fff;
+}
+
+.icon-bl1-2, .icon-bl3-2, .para2-bl1-2 a, .para2-bl3-2 a {
     color: #03d6f3;
 }
 
