--- a/style3.css
+++ b/style3.css
@@ -35,6 +35,11 @@ body {
     margin-top: 0;
     margin-bottom: 0;
     white-space: nowrap;
+    font-size: 46px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 57px; /* 123.913% */
+  letter-spacing: 0.2px;
   }
 
   .paragraphe-3 {
@@ -45,13 +50,21 @@ body {
     margin: 0 auto;
     overflow: hidden;
     color: #a0aec0;
-    line-height: 1.5;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px; /* 125% */
+    letter-spacing: 0.2px;
   }
 
   .para2-3 {
     padding: 0 80px;
   }
   
+  .para2-3 a {
+    color: #2D3748;
+  }
+
   .button-3 {
     display: flex;
     flex-direction: column;
@@ -64,6 +77,7 @@ body {
     font-weight: 500;
     gap: 10px;
     white-space: nowrap;
+    cursor: pointer;
   }
     
   .button3 {
@@ -75,6 +89,10 @@ body {
     align-items: center;
     padding: 15px 80px;
     box-sizing: border-box;
+  }
+
+  .button3:hover {
+    background-color: #1ae0fa;
   }
     
   #pic3 {
