--- a/style5.css
+++ b/style5.css
@@ -44,6 +44,10 @@ body {
 .sign-up-5:hover {
   background-color: #1ae0fa;
 }
+
+.sign-up-5:active {
+  background-color: #17c7de;
+}
   
 .find-out-5 {
   box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
@@ -60,6 +64,10 @@ body {
 
 .find-out-5:hover {
   background-color: #f6f6f6;
+}
+
+.find-out-5:active {
+  background-color: #dadada;
 }
   
 #pic5 {
