--- a/style3.css
+++ b/style3.css
@@ -36,10 +36,14 @@ body {
     margin-bottom: 0;
     white-space: nowrap;
     font-size: 46px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 57px; /* 123.913% */
-  letter-spacing: 0.2px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 57px; /* 123.913% */
+    letter-spacing: 0.2px;
+  }
+
+  .headline2-3 {
+    display: none;
   }
 
   .paragraphe-3 {
@@ -117,13 +121,43 @@ body {
         padding: 30px 100px;
         gap: 0;
     }
+
+    .headline-3 {
+      display: none;
+    }
+
+    .headline2-3 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      overflow: hidden;
+      font-size: large;
+      line-height: 1;
+      gap: 10px;
+      padding: 0 80px;
+    }
+  
+    .headline2-3 h1 {
+      margin-top: 0;
+      margin-bottom: 0;
+      white-space: nowrap;
+      font-size: 46px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 57px; /* 123.913% */
+      letter-spacing: 0.2px;
+    }
       
     .infor-3 {
         grid-row: 1;
         grid-column: 2; 
         align-self: flex-end;
     }
-      
+    
+    .para2-3 {
+      display: none;
+    }
+
     .button-3 {
         grid-row: 2;
         grid-column: 2; 
