--- a/style6.css
+++ b/style6.css
@@ -1,5 +1,7 @@
+@import url('global.css');
+
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-family);
     margin: 0;
     padding: 0;
 }
@@ -31,16 +33,17 @@ body {
 }
 
 .headline-6 h2 {
-    font-size: 46px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 57px; /* 123.913% */
-    letter-spacing: 0.2px;
+    color: var (--first-text);
+    font-size: var(--second-head-size);
+    font-style: var(--font-style);
+    font-weight: var(--third-weight);
+    line-height: var(--first-height); /* 123.913% */
+    letter-spacing: var(--letter-spacing);
 }
 
 .para-6 {
-    font-size: 20px;
-    color: #A0AEC0;
+    font-size: var(--para-size);
+    color: var(--second-text);
 }
 
 #pic6-1, #pic6-2, #pic6-3 {
@@ -56,7 +59,6 @@ body {
 
 .block1-6, .block2-6, .block3-6 {
     border: 1px solid #DEDEDE;
-    /* box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15); */
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -81,25 +83,27 @@ body {
     padding: 20px 0;
 }
 
-.head-bl1-6, .head-bl2-6, .head-bl3-6 {
-    font-size: 30px;
-font-style: normal;
-font-weight: 700;
-line-height: 33px; /* 110% */
-letter-spacing: 0.1px;  
+.head-bl1-6 h3, .head-bl2-6 h3, .head-bl3-6 h3{
+    color: var (--first-text);
+    font-size: var(--third-head-size);
+    font-style: normal;
+    font-weight: 700;
+    line-height: var(--second-height); /* 110% */
+    letter-spacing: 0.1px;  
 }
 
 .head-bl1-6 h3, .head-bl2-6 h3, .head-bl3-6 h3 {
     margin: 0 0;
 }
 
-.smhead-bl1-6, .smhead-bl2-6, .smhead-bl3-6 {
-    color: #A0AEC0;
+.smhead-bl1-6 p, .smhead-bl2-6 p, .smhead-bl3-6 p {
+    font-family: var(--font-family2);
+    color: var(--second-text);
     font-size: 12px;
-font-style: normal;
-font-weight: 700;
-line-height: 18px; /* 150% */
-letter-spacing: 0.1px;
+    font-style: var(--font-style);
+    font-weight: var(--second-weight);
+    line-height: 18px; /* 150% */
+    letter-spacing: 0.1px;
 }
 
 .smhead-bl2-6 {
@@ -118,19 +122,20 @@ letter-spacing: 0.1px;
     font-weight: 900;
     line-height: 65.5px; /* 119.091% */
     letter-spacing: 0.2px;
-    color: #4FD1C5;
+    color: var(--primary);
 }
 
 .icon-6 {
     font-size: 30px;
-    color: #4FD1C5;
+    color: var(--primary);
 }
 
 .infordollar-6 {
-    color: #A0AEC0;
+    font-family: var(--font-family2);
+    color: var(--second-text);
     font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
+    font-style: var(--font-style);
+    font-weight: var(--second-weight);
     line-height: 18px; /* 150% */
     letter-spacing: 0.1px;
 }
@@ -138,34 +143,33 @@ letter-spacing: 0.1px;
 .para-bl1-6, .para-bl2-6, .para-bl3-6 {
     text-align: center;
     gap: 60px;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 27px; /* 180% */
-    letter-spacing: 0.2px;
+    font-size: var(--link-size);
+    font-style: var(--font-style);
+    font-weight: var(--fourth-weight);
+    line-height: var(--third-height); /* 180% */
+    letter-spacing: var(--letter-spacing);
 }
 
 .button-bl1-6, .button-bl2-6, .button-bl3-6 {
-    color: #FFF;
+    color: var(--light-text);
     box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
     border-radius: 39px;
-    background-color: #03d6f3;
+    background-color: var(--secondary);
     overflow: hidden;
     flex-direction: row;
     align-items: center;
     padding: 18px 90px;
     box-sizing: border-box;
     margin: 20px 0;
-    cursor: pointer;
-    
+    cursor: pointer;   
 }
 
 .button-bl1-6:hover, .button-bl2-6:hover, .button-bl3-6:hover{
-    background-color: #1ae0fa;
+    background-color: var(--hover-color);
 }
 
 .button-bl1-6:active, .button-bl2-6:active, .button-bl3-6:active{
-    background-color: #17c7de;
+    background-color: var(--active-color);
 }
 
 @media (min-width: 1060px) {
@@ -178,11 +182,11 @@ letter-spacing: 0.1px;
     }
 
     .efp-bl-6 {
-        color: #A0AEC0;
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 27px; /* 180% */
-        letter-spacing: 0.2px;
+        color: var(--second-text);
+        font-size: var(--link-size);
+        font-style: var(--font-style);
+        font-weight: var(--fourth-weight);
+        line-height: var(--third-height); /* 180% */
+        letter-spacing: var(--letter-spacing);
     }
 }
