--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,7 @@
+@import url('global.css');
+
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-family);
     margin: 0;
     padding: 0;
 }
@@ -23,11 +25,12 @@ body {
 }
 
 .headline-2 h2 {
-    font-size: 46px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 57px; /* 123.913% */
-    letter-spacing: 0.2px;
+    color: var (--first-text);
+    font-size: var(--second-head-size);
+    font-style: var(--font-style);
+    font-weight: var(--third-weight);
+    line-height: var(--first-height); /* 123.913% */
+    letter-spacing: var(--letter-spacing);
 }
 
 .infor-2 {
@@ -37,6 +40,7 @@ body {
 }
 
 .block1-2, .block2-2, .block3-2 {
+    color: var (--first-text);
     border: 1px solid #DEDEDE;
     box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -50,8 +54,8 @@ body {
 }
 
 .block2-2 {
-    color: whitesmoke;
-    background: linear-gradient(230.95deg, #cb1ae8, #37bda6);
+    color: var(--light-text);
+    background: var(--dark-background);
 }
 
 .para-bl1-2, .para-bl2-2, .para-bl3-2 {
@@ -59,7 +63,7 @@ body {
 }
 
 .para-bl1-2, .para-bl3-2 {
-    color: rgba(136, 136, 136, 0.758);
+    color: var(--second-text);
 }
 
 #icon-bl1-2, #icon-bl2-2, #icon-bl3-2 {
@@ -67,17 +71,17 @@ body {
 }
 
 .para2-bl2-2 a {
-    color: #fff;
+    color: var(--light-text);
 }
 
 .icon-bl1-2, .icon-bl3-2, .para2-bl1-2 a, .para2-bl3-2 a {
-    color: #03d6f3;
+    color: var(--secondary);
 }
 
 @media (min-width:1230px) {
     .headline-2 {
         width: 50%;
-        font-size: 30px;
+        font-size: var(--second-head-size);
     }
 
     .infor-2 {
@@ -90,7 +94,7 @@ body {
     }
 
     .head-bl1-2, .head-bl2-2, .head-bl3-2 {
-        font-size: 25px;
+        font-size: var(--third-head-size);
     }
 
     .icon-bl1-2, .icon-bl2-2, .icon-bl3-2 {
@@ -98,7 +102,7 @@ body {
     }
 
     .para-bl1-2, .para-bl2-2, .para-bl3-2 {
-        font-size: 17px;
+        font-size: var(--para-size);
         text-align: left;
     }
 }
