--- a/style3.css
+++ b/style3.css
@@ -1,7 +1,9 @@
+@import url('global.css');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-family);
   }
     
   .container-3 {
@@ -35,11 +37,12 @@ body {
     margin-top: 0;
     margin-bottom: 0;
     white-space: nowrap;
-    font-size: 46px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 57px; /* 123.913% */
-    letter-spacing: 0.2px;
+    color: var (--first-text);
+    font-size: var(--second-head-size);
+    font-style: var(--font-style);
+    font-weight: var(--third-weight);
+    line-height: var(--first-height); /* 123.913% */
+    letter-spacing: var(--letter-spacing);
   }
 
   .headline2-3 {
@@ -53,12 +56,12 @@ body {
   .paragraphe-3 p {
     margin: 0 auto;
     overflow: hidden;
-    color: #a0aec0;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 20px; /* 125% */
-    letter-spacing: 0.2px;
+    color: var(--second-text);
+    font-size: var(--first-subhead-size);
+    font-style: var(--first-subhead-size);
+    font-weight: var(--second-weight);
+    line-height: var(--fourth-height); /* 125% */
+    letter-spacing: var(--letter-spacing);
   }
 
   .para2-3 {
@@ -66,7 +69,7 @@ body {
   }
   
   .para2-3 a {
-    color: #2D3748;
+    color: var(--first-text);
   }
 
   .button-3 {
@@ -75,10 +78,10 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    color: #fff;
+    color: var(--light-text);
     position: relative;
-    letter-spacing: 0.2px;
-    font-weight: 500;
+    letter-spacing: var(--letter-spacing);
+    font-weight: var(--third-weight);
     gap: 10px;
     white-space: nowrap;
     cursor: pointer;
@@ -87,7 +90,7 @@ body {
   .button3 {
     box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
     border-radius: 39px;
-    background-color: #03d6f3;
+    background-color: var(--secondary);
     overflow: hidden;
     flex-direction: row;
     align-items: center;
@@ -96,11 +99,11 @@ body {
   }
 
   .button3:hover {
-    background-color: #1ae0fa;
+    background-color: var(--hover-color);
   }
 
   .button3:active {
-    background-color: #17c7de;
+    background-color: var(--active-color);
   }
     
   #pic3 {
@@ -141,11 +144,12 @@ body {
       margin-top: 0;
       margin-bottom: 0;
       white-space: nowrap;
-      font-size: 46px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 57px; /* 123.913% */
-      letter-spacing: 0.2px;
+      color: var (--first-text);
+      font-size: var(--second-head-size);
+      font-style: var(--font-style);
+      font-weight: var(--third-weight);
+      line-height: var(--first-height); /* 123.913% */
+      letter-spacing: var(--letter-spacing);
     }
       
     .infor-3 {
