--- a/style4.css
+++ b/style4.css
@@ -1,7 +1,9 @@
+@import url('global.css');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-family);
   }
     
   .container-4 {
@@ -25,11 +27,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    font-size: 16px;
-    color: #fff;
+    font-size: var(--first-subhead-size);
+    color: var(--light-text);
     position: relative;
-    letter-spacing: 0.2px;
-    font-weight: 500;
+    letter-spacing: var(--letter-spacing);
+    font-weight: var(--third-weight);
     gap: 10px;
     white-space: nowrap;
     cursor: pointer;
@@ -38,7 +40,7 @@ body {
   .sign-up-4 {
     box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
     border-radius: 39px;
-    background-color: #03d6f3;
+    background-color: var(--secondary);
     overflow: hidden;
     flex-direction: row;
     align-items: center;
@@ -47,32 +49,32 @@ body {
   }
 
   .sign-up-4:hover {
-    background-color: #1ae0fa;
+    background-color: var(--hover-color);
   }
 
   .sign-up-4:active {
-    background-color: #17c7de;
+    background-color: var(--active-color);
   }
     
   .find-out-4 {
     box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
     border-radius: 39px;
-    background-color: #fff;
-    border: 1px solid #4fd1c5;
+    background-color: var(--light-background);
+    border: 1px solid var(--primary);
     box-sizing: border-box;
     overflow: hidden;
     flex-direction: row;
     align-items: center;
     padding: 15px 85px;
-    color: #4fd1c5;
+    color: var(--primary);
   }
 
   .find-out-4:hover {
-    background-color: #f6f6f6;
+    background-color: var(--hover-color2);
   }
 
   .find-out-4:active {
-    background-color: #dadada;
+    background-color: var(--active-color2);
   }
     
   #pic4 {
@@ -95,11 +97,12 @@ body {
     margin-top: 0;
     margin-bottom: 0;
     white-space: nowrap;
-    font-size: 46px;
-font-style: normal;
-font-weight: 500;
-line-height: 57px; /* 123.913% */
-letter-spacing: 0.2px;
+    color: var (--first-text);
+    font-size: var(--second-head-size);
+    font-style: var(--font-style);
+    font-weight: var(--third-weight);
+    line-height: var(--first-height); /* 123.913% */
+    letter-spacing: var(--letter-spacing);
   }
 
   .paragraphe-4 {
@@ -109,12 +112,12 @@ letter-spacing: 0.2px;
   .paragraphe-4 p {
     margin: 0 auto;
     overflow: hidden;
-    color: #A0AEC0;
-    font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: 20px; /* 125% */
-letter-spacing: 0.2px;  
+    color: var(--second-text);
+    font-size: var(--first-subhead-size);
+    font-style: var(--font-style);
+    font-weight: var(--second-weight);
+    line-height: var(--fourth-height); /* 125% */
+    letter-spacing: var(--letter-spacing);  
   }
   
 @media (min-width: 768px) {
