--- a/style7.css
+++ b/style7.css
@@ -1,7 +1,9 @@
+@import url('global.css');
+
 body {
     margin: 0 ;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-family);
 }
 
 .container-7 {
@@ -24,12 +26,13 @@ body {
     margin: 0 auto; 
 }
 
-.headline-7 {   
-    font-size: 46px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 57px;
-    letter-spacing: 0.2px;
+.headline-7 {  
+    color: var (--first-text); 
+    font-size: var(--second-head-size);
+    font-style: var(--font-style);
+    font-weight: var(--third-weight);
+    line-height: var(--first-height);
+    letter-spacing: var(--letter-spacing);
     margin: 5px;
 }
 
@@ -38,18 +41,18 @@ body {
 }
 
 .para1-7 {
-    color: #A0AEC0;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 27px; /* 150% */
-    letter-spacing: 0.2px;  
+    color: var(--second-text);
+    font-size: var(--para-size);
+    font-style: var(--font-style);
+    font-weight: var(--fourth-weight);
+    line-height: var(--third-height); /* 150% */
+    letter-spacing: var(--letter-spacing);  
 }
 
 .email-input-7 {
     background: #EFEFEF;
     border: 1px solid #D0D0D0;
-    font-size: small;
+    font-size: var(--link-size);
     border-radius: 6px;
     padding: 20px 100px;
 }
@@ -70,12 +73,12 @@ body {
     justify-content: center;
     align-items: center;
     color: #EFEFEF;
-    background-color: #03d6f3;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
+    background-color: var(--secondary);
+    font-size: var(--first-subhead-size);
+    font-style: var(--font-style);
+    font-weight: var(--third-weight);
     line-height: 16px;
-    letter-spacing: 0.2px; 
+    letter-spacing: var(--letter-spacing); 
     border-radius: 5px;
     padding: 20px 100px;
     box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
@@ -83,11 +86,11 @@ body {
 }
 
 .button-sup-7:hover {
-    background-color: #1ae0fa;
+    background-color: var(--hover-color);
 }
 
 .button-sup-7:active {
-    background-color: #17c7de;
+    background-color: var(--active-color);
 }
 
 .main2-7 {
