--- a/style2.css
+++ b/style2.css
@@ -43,7 +43,7 @@ body {
     color: var (--first-text);
     border: 1px solid #DEDEDE;
     box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
+    border-radius: var(--block-radius);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,7 +67,7 @@ body {
 }
 
 #icon-bl1-2, #icon-bl2-2, #icon-bl3-2 {
-    font-size: 50px;
+    font-size: var(--first-icon-size);
 }
 
 .para2-bl2-2 a {
@@ -102,7 +102,7 @@ body {
     }
 
     .icon-bl1-2, .icon-bl2-2, .icon-bl3-2 {
-        font-size: 70px;
+        font-size: var(--second-icon-size);
     }
 
     .para-bl1-2, .para-bl2-2, .para-bl3-2 {
@@ -120,7 +120,7 @@ body {
     }
 
     #icon-bl1-2, #icon-bl2-2, #icon-bl3-2 {
-        font-size: 65px;
+        font-size: var(--third-icon-size);
     }
     
 }
