--- a/style3.css
+++ b/style3.css
@@ -89,7 +89,7 @@ body {
     
   .button3 {
     box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-    border-radius: 39px;
+    border-radius: var(--button-radius);
     background-color: var(--secondary);
     overflow: hidden;
     flex-direction: row;
