--- a/style5.css
+++ b/style5.css
@@ -34,8 +34,8 @@ body {
   
 .sign-up-5 {
   box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-  border-radius: 39px;
-  background-color: #03d6f3;
+  border-radius: var(--button-radius);
+  background-color: var(--secondary);
   overflow: hidden;
   flex-direction: row;
   align-items: center;
@@ -53,9 +53,9 @@ body {
   
 .find-out-5 {
   box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-  border-radius: 39px;
+  border-radius: var(--button-radius);
   background-color: var(--light-background);
-  border: 1px solid #4fd1c5;
+  border: 1px solid var(--primary);
   box-sizing: border-box;
   overflow: hidden;
   flex-direction: row;
