--- a/style7.css
+++ b/style7.css
@@ -79,7 +79,7 @@ body {
     font-weight: var(--third-weight);
     line-height: 16px;
     letter-spacing: var(--letter-spacing); 
-    border-radius: var(--button-radius);
+    border-radius: var(--block-radius);
     padding: 20px 100px;
     box-shadow: 0px 4px 31px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
