add the css variable

--- a/global.css
+++ b/global.css
@@ -16,6 +16,7 @@
     --first-icon-size: 50px;
     --second-icon-size: 70px;
     --third-icon-size: 65px;
+    --fourth-icon-size: 40px;
 
     /* Font Weight */
     --first-weight: 900;
