--- a/style.css
+++ b/style.css
@@ -102,16 +102,16 @@ ul li a:hover {
 
 #list-icon {
     color: var(--light-text);
-    font-size: 40px;
+    font-size: var(--icon-size2);
     padding: 5px;
 }
 
 #list-icon:hover {
-    color: rgb(255, 255, 255);
+    color: var(--hover-color3);
 }
 
 #list-icon:active {
-    color: rgb(192, 192, 192);
+    color: var(--active-color3);
 }
 
 .mobile-dv {
