--- a/style6.css
+++ b/style6.css
@@ -102,7 +102,7 @@ body {
     font-size: 12px;
     font-style: var(--font-style);
     font-weight: var(--second-weight);
-    line-height: 18px; /* 150% */
+    line-height: var(--fifth-height); /* 150% */
     letter-spacing: var(--letter-spacing2);
 }
 
@@ -117,7 +117,7 @@ body {
 }
 
 .numberprice-6 {
-    font-size: 40px;
+    font-size: var(--fourth-icon-size);
     font-style: var(--font-style);
     font-weight: var(--first-weight);
     line-height: var(--main-head-height); /* 119.091% */
