--- a/style7.css
+++ b/style7.css
@@ -128,8 +128,8 @@ body {
 }
 
 .para2-7 {
-    font-size: smaller;
-    font-weight: bold; 
+    font-size: 12px;
+    font-weight: var(--second-weight); 
 }
 
 #pic-7 {
