--- a/style2.css
+++ b/style2.css
@@ -48,8 +48,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 300px;
+    max-width: 300px;
+    max-height: 300px;
     padding: 30px;
 }
 
@@ -114,8 +114,8 @@ body {
 @media (min-width:1390px) {
     .block1-2, .block2-2, .block3-2 {
         align-items: flex-start;
-        width: 350px;
-        height: 350px;
+        min-width: 350px;
+        min-height: 350px;
         padding: 40px;
     }
 
