--- a/style3.css
+++ b/style3.css
@@ -26,11 +26,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     overflow: hidden;
     font-size: large;
     line-height: 1;
     gap: 10px;
-    padding: 0 80px;
+    /* padding: 0 80px; */
   }
 
   .headline-3 h1 {
