--- a/style4.css
+++ b/style4.css
@@ -87,10 +87,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     overflow: hidden;
     line-height: 1;
     gap: 10px;
-    padding: 0 60px;
+    /* padding: 0 60px; */
   }
 
   .headline-4 h1 {
@@ -106,6 +107,9 @@ body {
   }
 
   .paragraphe-4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 0 60px;
   }
 
