--- a/style3.css
+++ b/style3.css
@@ -29,21 +29,19 @@ body {
     align-items: center;
     overflow: hidden;
     font-size: large;
-    line-height: 1;
-    gap: 10px;
-    /* padding: 0 80px; */
+    height: auto;
   }
 
   .headline-3 h1 {
     margin-top: 0;
     margin-bottom: 0;
-    white-space: nowrap;
     color: var (--first-text);
     font-size: var(--second-head-size);
     font-style: var(--font-style);
     font-weight: var(--third-weight);
-    line-height: var(--first-height); /* 123.913% */
+    line-height: var(--first-height);
     letter-spacing: var(--letter-spacing);
+    padding: 0 80px;
   }
 
   .headline2-3 {
@@ -61,7 +59,7 @@ body {
     font-size: var(--first-subhead-size);
     font-style: var(--first-subhead-size);
     font-weight: var(--second-weight);
-    line-height: var(--fourth-height); /* 125% */
+    line-height: var(--fourth-height); 
     letter-spacing: var(--letter-spacing);
   }
 
@@ -139,12 +137,12 @@ body {
       line-height: 1;
       gap: 10px;
       padding: 0 80px;
+      max-width: 522px;
     }
   
     .headline2-3 h1 {
       margin-top: 0;
       margin-bottom: 0;
-      white-space: nowrap;
       color: var (--first-text);
       font-size: var(--second-head-size);
       font-style: var(--font-style);
