--- a/style4.css
+++ b/style4.css
@@ -91,13 +91,12 @@ body {
     overflow: hidden;
     line-height: 1;
     gap: 10px;
-    /* padding: 0 60px; */
+    padding: 0 60px;
   }
 
   .headline-4 h1 {
     margin-top: 0;
     margin-bottom: 0;
-    white-space: nowrap;
     color: var (--first-text);
     font-size: var(--second-head-size);
     font-style: var(--font-style);
